--- a/index.html
+++ b/index.html
@@ -7,13 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        alert("Rezwanur Rahman" ); <!-- This is a built is library function-->
-        alert(" This is from Bangladesh");
-        document.write(" I dedicate my works to BANGLADESH, My country");
-        console.log(" Let's make BANGLADESH to lead the World"); 
-        //--These are all printing function in Javascript or js-->
+    <h1>
+        <script>
+           
+         //  alert("Rezwanur Rahman" ); <!-- This is a built is library function-->
+          //  alert(" This is from Bangladesh");
+          //  document.write(" I dedicate my works to BANGLADESH, My country");
+           // console.log(" Let's make BANGLADESH to lead the World"); 
+            //--These are all printing function in Javascript or js-->
+          //  var name, age;
+           // name= "I am Fahim Ladis and Gentlemen, I am ";
+          //  age= 23;
+           // document.write(name, age);  
+            
+            </script>
+    </h1>
+   
 
-        </script>
+       <!--<script src="HelloWorld.js"></script>
+        <script src="calculator.js"></script>
+        <script src="Temp_converter.js"></script>
+        <script src="loop.js"></script>
+        <script src="function.js"></script> 
+        <script src="Array.js"></script> 
+        <script src="Object.js"></script> --> 
+        <script src="GuessingGame.js"></script>
+
+
+
 </body>
 </html>
+ 
